--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.0",
     "@tailwindcss/vite": "^4.1.12",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
