--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.0",
     "@tailwindcss/vite": "^4.1.12",
@@ -20,6 +21,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
