[FE] feat: todo api 구현

--- a/front/package.json
+++ b/front/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "concurrently \"vite\" \"json-server --watch mock/db.json --port 3001\""
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.0",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -29,10 +30,12 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
